Refactored AlphaVantageClient and AlphaVantageParser. Improved data structure and parsing. Adjusted GUI classes to function with new structure.
Signed-off-by: JoarEliasson <joar.eliasson@gmail.com>